--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Deploy to Developer Env (GKE)
         run: |
          gcloud components install gke-gcloud-auth-plugin
-         gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_DEV }} --region ${{ env.GKE_REGION }} --project ${{ env.PROJECT_ID }}
+         gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_DEV }} --region us-cluster1 --project ${{ env.PROJECT_ID }}
          kubectl set image deployment governance-ai governance-ai=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ steps.date.outputs.date }} -n perfai
           
 
@@ -122,7 +122,7 @@ jobs:
     - name: Deploy to PROD Env (GKE)
       run: |
          gcloud components install gke-gcloud-auth-plugin
-         gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_PROD }} --region ${{ env.GKE_REGION }} --project ${{ env.PROD_PROJECT }}
+         gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_PROD }} --region us-cluster1 --project ${{ env.PROD_PROJECT }}
          kubectl set image deployment governance-ai governance-ai=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROD_PROJECT }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ steps.date.outputs.date }} -n perfai
            
 ### Email Alert Notifcation ###
