--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,13 +7,10 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   PROD_PROJECT: ${{ secrets.PROD_PROJECT }}
-  REPOSITORY: ${{ secrets.REPOSITORY }}              # Add your repository name here.
+  REPOSITORY: governance-ai              # Add your repository name here.
   GAR_LOCATION: us-south1                            # Add your repository region name here.
-  IMAGE: ${{ secrets.IMAGE }}                        # Add your image name here.
+  IMAGE: governance-ai                        # Add your image name here.
   IMAGE_TAG: $(date "+%F-%H%M")                      # Add your image date-tag name here.
-  GKE_CLUSTER_DEV: ${{ secrets.GKE_CLUSTER_DEV }}    # Add your cluster name here.
-  GKE_CLUSTER_PROD: ${{ secrets.GKE_CLUSTER_PROD }}  # Add your cluster name here.
-  GKE_REGION: us-cluster1                            # Add your cluster region here.
   
 jobs:
   Deploy-Developer:
@@ -68,7 +65,7 @@ jobs:
       - name: Deploy to Developer Env (GKE)
         run: |
          gcloud components install gke-gcloud-auth-plugin
-         gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_DEV }} --region us-cluster1 --project ${{ env.PROJECT_ID }}
+         gcloud container clusters get-credentials perfai-dev-autopilot --region us-central1 --project perfai-dev
          kubectl set image deployment governance-ai governance-ai=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ steps.date.outputs.date }} -n perfai
           
 
@@ -122,7 +119,7 @@ jobs:
     - name: Deploy to PROD Env (GKE)
       run: |
          gcloud components install gke-gcloud-auth-plugin
-         gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_PROD }} --region us-cluster1 --project ${{ env.PROD_PROJECT }}
+         gcloud container clusters get-credentials perfai-prod-standard --region us-central1 --project perfai-production
          kubectl set image deployment governance-ai governance-ai=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROD_PROJECT }}/${{ env.REPOSITORY }}/${{ env.IMAGE }}:${{ steps.date.outputs.date }} -n perfai
            
 ### Email Alert Notifcation ###
